k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duepilot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: duepilot-app
  template:
    metadata:
      labels:
        app: duepilot-app
    spec:
      containers:
        - name: django
          image: axanth/axanth_base_image:latest
          ports:
            - containerPort: 8000
          command: ["python"]
          args: ["manage.py", "runserver", "0.0.0.0:8000"]
