k8s/dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
spec:
  selector:
    app: fake
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
