k8s/redirect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
spec:
  selector:
    app: redirect
  ports:
    - port: 80
      targetPort: 80
