k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duepilot-service
spec:
  selector:
    app: duepilot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
