k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duepilot-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.duepilot.gr
        - duepilot.gr
      secretName: www-duepilot-tls
  rules:
    - host: www.duepilot.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duepilot-service
                port:
                  number: 80
    - host: duepilot.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duepilot-service
                port:
                  number: 80
